# ssi_tracing

./: CMakeLists.txt  LICENSE  README.md
include/: ssi_ode_generate.hpp
include/timeIntegrator/: timeIntegrator.h
include/timeIntegrator/core/: ClassicalRK.hpp  ClassicalRK.inl
include/timeIntegrator/util/: setup.hpp
src/: CMakeLists.txt  bezier_main.cpp  nurbs1_main.cpp  nurbs2_main.cpp  tran_intersec.cpp  transversal.cpp
src/examples/nurbs1/: surface1.stl  surface2.stl
src/examples/nurbs2/: surface1.stl  surface2.stl
src/examples/nurbs3/: surface1.stl  surface2.stl
src/examples/nurbs4/: surface1.stl  surface2.stl
src/examples/nurbs5/: surface1.stl  surface2.stl
test/: CMakeLists.txt  test_igl.cpp  test_tn.cpp
test/examples/: bunny.off
